Cambiado el metodo de lectura de archivos